fixed navbar collapse after clicking login||signup so that ul.dropdown closes so users can login via modal

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -85,7 +85,7 @@ ul .dropdown-menu {
 
 /* Modal */
 .modal-dialog {
-  margin-top: 10%;
+  margin-top: 12%;
 }
 
 .modal-content {
@@ -109,12 +109,10 @@ ul .dropdown-menu {
 .modal-header {
   background-color: #36454f;
   color: #7fdbd4;
-  // color: #7fdbd4;
 }
 
 .modal-body {
   // background-color: #36454f;
-
   form {
     width: 75%;
     margin-left: auto;
